fixtures/frontend/milestone-2/valid/pipe-scan-signal-wakeup/main.aivi
fun step:Int tick:Unit current:Int =>
    current + 1

@source timer.every 120 with {
    immediate: True
}
signal tick : Signal Unit

signal retried : Signal Int =
    tick
     +|> 0 step
