fixtures/frontend/milestone-2/invalid/request-recurrence-missing-wakeup/main.aivi
value step x =>
    x

@source http.get "/users"
signal broken : Signal Int =
    0
     @|> step
     <|@ step
